virt01/manual/tools/kms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kms-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: dashboard-kms.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: kms-web-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dashboard-kms.k3s.nf.lab
    secretName: kms-tls
